# beam

./: CMakeLists.txt  CMakeUserPresets.json  README.md  feature.md
libs/orion/: CMakeLists.txt
libs/orion/dialogs/: OriConfigDlg.cpp  OriConfigDlg.h
libs/orion/helpers/: OriWindows.cpp
libs/orion/tools/: OriSettings.h
libs/orion/widgets/: OriPopupButton.cpp  OriPopupMessage.cpp  OriPopupMessage.h
src/: app.aps  main.cpp  zh_CN.ts
src/app/: AppSettings.h  HelpSystem.cpp
src/cameras/: Camera.cpp  CameraTypes.cpp  HardConfigPanel.cpp  IdsCamera.cpp  IdsCamera.h  IdsCameraConfig.cpp  IdsCameraConfig.h  IdsHardConfig.cpp  IdsHardConfig.h  MeasureSaver.cpp  MeasureSaver.h  WelcomeCamera.cpp
src/plot/: BeamGraph.cpp  PlotExport.h  RoiRectGraph.cpp
src/widgets/: Plot.cpp  TableIntf.cpp
src/windows/: PlotWindow.cpp  PlotWindow.h  messageconsole.cpp  messageconsole.h
